<resources>
    <string name="app_name">Gallery16</string>
    <string name="content">Content</string>


    // Settings Preference
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_teaminfo">Team Information</string>
    <string name="title_language">Language</string>
    <string name="security">Security key</string>
    <string name="passkey_summary_off">Security key is turned off</string>
    <string name="passkey_summary_on">Security key is turned on</string>
    <string name="select_language_title">Select display language</string>
    <string name="darkmode_title">Dark mode</string>
    <string name="darkmode_summary_on">Dark Mode is turned on</string>
    <string name="darkmode_summary_off">Dark mode is turned off</string>
    <string name="display_title">Display</string>
    <string name="security_title">Security</string>
    <string name="find_hint">Time, Place, People</string>
    <string name="Setting">Setting</string>
    <string name="Search">Search</string>
    // End: Settings Preference

    //PIN activity
    <string name="PIN_activity_title">Change your password (6 digits)</string>
    <string name="input_old_PIN">Old PIN</string>
    <string name="input_new_PIN">New PIN</string>
    <string name="btn_change_PIN">Change PIN</string>
    <string name="Note_PIN">Note: Default PIN is 123456</string>

    <!-- String for Infomation Activity -->
    <string name="version">Version</string>
    <string name="license_terms">License Term</string>
    <string name="policy">Policy</string>
    <string name="team_info">Team Info</string>
    <string name="feedback">Feedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Delete">Delete</string>

</resources>