<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_language">

        <ListPreference
            app:defaultValue="english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/select_language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_title">

        <SwitchPreferenceCompat
            app:key="darkmode"
            app:summaryOff="@string/darkmode_summary_off"
            app:summaryOn="@string/darkmode_summary_on"
            app:title="@string/darkmode_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_title">

        <SwitchPreferenceCompat
            app:key="securityKey"
            app:title="@string/security"
            app:summaryOff="@string/passkey_summary_off"
            app:summaryOn="@string/passkey_summary_on"/>

    </PreferenceCategory>

</PreferenceScreen>